--- a/.github/actions/with-k-docker/action.yml
+++ b/.github/actions/with-k-docker/action.yml
@@ -10,23 +10,54 @@ inputs:
     required: true
     type: string
     default: kframework.deb
+  distro:
+    description: 'Distribution to setup Docker for.'
+    required: true
+    type: string
+    default: jammy
+  run-container:
+    description: 'Run the K container automatically with default settings.'
+    required: true
+    type: boolean
+    default: true
 runs:
   using: 'composite'
   steps:
   - name: 'Set up Docker'
     shell: bash {0}
+    env:
+      BASE_DISTRO: ${{ inputs.distro }}
+      GH_TOKEN: ${{ github.token }}
     run: |
       set -euxo pipefail
+
+      gh release download                           \
+        --repo runtimeverification/llvm-backend     \
+        --pattern "*ubuntu_${BASE_DISTRO}.deb"  \
+        --output llvm-backend.deb                   \
+        v$(cat deps/llvm-backend_release)
 
       CONTAINER_NAME=${{ inputs.container-name }}
       TAG=runtimeverificationinc/${CONTAINER_NAME}
       DOCKERFILE=${{ github.action_path }}/Dockerfile
       K_DEB_PATH=${{ inputs.k-deb-path }}
+      LLVM_BACKEND_DEB_PATH=llvm-backend.deb
 
       docker build . \
-        --file ${DOCKERFILE}             \
-        --tag ${TAG}                     \
-        --build-arg K_DEB_PATH=${K_DEB_PATH}
+        --file ${DOCKERFILE}                                        \
+        --tag ${TAG}                                                \
+        --build-arg BASE_DISTRO=${BASE_DISTRO}                      \
+        --build-arg K_DEB_PATH=${K_DEB_PATH}                        \
+        --build-arg LLVM_BACKEND_DEB_PATH=${LLVM_BACKEND_DEB_PATH}
+
+  - name: 'Run Docker container'
+    shell: bash {0}
+    if: ${{ inputs.run-container == 'true' }}
+    run: |
+      set -euxo pipefail
+
+      CONTAINER_NAME=${{ inputs.container-name }}
+      TAG=runtimeverificationinc/${CONTAINER_NAME}
 
       docker run                 \
         --name ${CONTAINER_NAME} \
