--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -27,6 +27,7 @@ pytest = "*"
 textual = "^0.27.0"
 tomli = "^2.0.1"
 xdg-base-dirs = "^6.0.1"
+hypothesis = "^6.103.1"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
