--- a/.github/actions/with-k-docker/action.yml
+++ b/.github/actions/with-k-docker/action.yml
@@ -10,6 +10,11 @@ inputs:
     required: true
     type: string
     default: kframework.deb
+  install-backend-debs:
+    description: 'Whether to install a separate package for the LLVM backend'
+    required: true
+    type: boolean
+    default: true
   distro:
     description: 'Distribution to setup Docker for.'
     required: true
@@ -28,26 +33,27 @@ runs:
     env:
       BASE_DISTRO: ${{ inputs.distro }}
       GH_TOKEN: ${{ github.token }}
+      INSTALL_BACKEND_DEBS: ${{ inputs.install-backend-debs }}
     run: |
       set -euxo pipefail
 
       gh release download                           \
         --repo runtimeverification/llvm-backend     \
-        --pattern "*ubuntu_${BASE_DISTRO}.deb"  \
-        --output llvm-backend.deb                   \
+        --pattern "*ubuntu_${BASE_DISTRO}.deb"      \
+        --output "${LLVM_BACKEND_DEB_PATH}          \
         v$(cat deps/llvm-backend_release)
 
       CONTAINER_NAME=${{ inputs.container-name }}
       TAG=runtimeverificationinc/${CONTAINER_NAME}
       DOCKERFILE=${{ github.action_path }}/Dockerfile
       K_DEB_PATH=${{ inputs.k-deb-path }}
-      LLVM_BACKEND_DEB_PATH=llvm-backend.deb
 
       docker build . \
         --file ${DOCKERFILE}                                        \
         --tag ${TAG}                                                \
         --build-arg BASE_DISTRO=${BASE_DISTRO}                      \
         --build-arg K_DEB_PATH=${K_DEB_PATH}                        \
+        --build-arg INSTALL_BACKEND_DEBS=${INSTALL_BACKEND_DEBS}    \
         --build-arg LLVM_BACKEND_DEB_PATH=${LLVM_BACKEND_DEB_PATH}
 
   - name: 'Run Docker container'
