--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -404,10 +404,41 @@ jobs:
             const { owner, repo } = context.repo
             await github.rest.repos.updateRelease({ owner, repo, release_id: ${{ needs.set-release-id.outputs.release_id }}, prerelease: false })
 
+  pyk-publish:
+    name: 'Publish pyk'
+    runs-on: ubuntu-latest
+    environment: production
+    permissions:
+      id-token: write
+    needs: release
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+
+      - name: Install Poetry
+        uses: Gr1N/setup-poetry@v9
+
+      - name: Build pyk
+        working-directory: pyk
+        run: |
+          make build
+
+      - name: Publish pyk to PyPI
+        uses: pypa/gh-action-pypi-publish@v1
+        with:
+          packages-dir: pyk/dist
+          user: __token__
+          password: ${{ secrets.PYPI_TOKEN }}
+
   notify-dependents:
     name: 'Notify Dependents'
     runs-on: ubuntu-latest
-    needs: release
+    needs: pyk-publish
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -463,7 +494,7 @@ jobs:
     name: 'GitHub Pages deployment'
     runs-on: ubuntu-24.04
     timeout-minutes: 30
-    needs: [pyk-build-docs, release]
+    needs: [pyk-build-docs, pyk-publish]
     steps:
       - name: 'Install pandoc/texlive/calibre'
         run: |
