--- a/.github/actions/with-k-docker/action.yml
+++ b/.github/actions/with-k-docker/action.yml
@@ -42,6 +42,7 @@ runs:
       DOCKERFILE=${{ github.action_path }}/Dockerfile
       K_DEB_PATH=${{ inputs.k-deb-path }}
       LLVM_BACKEND_DEB_PATH=llvm-backend.deb
+      HASKELL_BACKEND_DEB_PATH=haskell-backend.deb
 
       gh release download                           \
         --repo runtimeverification/llvm-backend     \
@@ -49,13 +50,20 @@ runs:
         --output "${LLVM_BACKEND_DEB_PATH}"         \
         v$(cat deps/llvm-backend_release)
 
+      gh release download                           \
+        --repo runtimeverification/haskell-backend  \
+        --pattern "*ubuntu_${BASE_DISTRO}.deb"      \
+        --output "${HASKELL_BACKEND_DEB_PATH}"      \
+        $(cat deps/haskell-backend_release)
+
       docker build . \
         --file ${DOCKERFILE}                                        \
         --tag ${TAG}                                                \
         --build-arg BASE_DISTRO=${BASE_DISTRO}                      \
         --build-arg K_DEB_PATH=${K_DEB_PATH}                        \
         --build-arg INSTALL_BACKEND_DEBS=${INSTALL_BACKEND_DEBS}    \
-        --build-arg LLVM_BACKEND_DEB_PATH=${LLVM_BACKEND_DEB_PATH}
+        --build-arg LLVM_BACKEND_DEB_PATH=${LLVM_BACKEND_DEB_PATH}  \
+        --build-arg HASKELL_BACKEND_DEB_PATH=${HASKELL_BACKEND_DEB_PATH}
 
   - name: 'Run Docker container'
     shell: bash {0}
