--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -441,6 +441,16 @@ jobs:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
 
+      - name: Wait for PyPi to publish Pyk
+        run: |
+          while true; do
+            VERSION=$(cat package/version)
+            if curl --fail --silent --location --head https://pypi.org/project/kframework/$VERSION; then
+              break
+            fi
+            sleep 10
+          done
+
   notify-dependents:
     name: 'Notify Dependents'
     runs-on: ubuntu-latest
