--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -28,6 +28,7 @@ pytest = "*"
 textual = "^0.27.0"
 tomli = "^2.0.1"
 xdg-base-dirs = "^6.0.1"
+networkx = "^3.3"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
