--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -29,6 +29,7 @@ textual = "^0.27.0"
 tomli = "^2.0.1"
 xdg-base-dirs = "^6.0.1"
 networkx = "^3.3"
+types-networkx = "^3.2.1.20240703"
 
 [tool.poetry.group.dev.dependencies]
 autoflake = "*"
@@ -84,6 +85,7 @@ skip-string-normalization = true
 
 [tool.mypy]
 disallow_untyped_defs = true
+namespace_packages = true
 
 [[tool.mypy.overrides]]
 module = "graphviz"
