--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -97,6 +97,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: recursive
+          fetch-depth: 0
 
       - name: 'Install dependencies'
         run: |
@@ -129,7 +130,7 @@ jobs:
           PATH="$(brew --prefix llvm)/bin:$PATH"
           PATH="$(brew --prefix openjdk)/bin:$PATH"
           export PATH
-          mvn verify -Dspotless.check.skip=true --batch-mode -U
+          mvn package -DskipTests
 
 
   test-package-ubuntu-jammy:
