--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -112,6 +112,7 @@ jobs:
               gmp         \
               openjdk     \
               jemalloc    \
+              libffi      \
               libyaml     \
               llvm        \
               make        \
