--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -139,6 +139,9 @@ jobs:
           PATH="$(brew --prefix openjdk)/bin:$PATH"
           export PATH
           mvn package -DskipTests
+          gmake --directory k-distribution/tests/regression-new \
+                --output-sync                                   \
+                --jobs "$(nproc)"
 
 
   test-package-ubuntu-jammy:
