--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,3 @@
-/k-distribution/include/kframework/builtin/* @dwightguth @ehildenb @Baltoli
+/k-distribution/include/kframework/builtin/* @ehildenb @tothtamas28
 /.github/workflows/* @runtimeverification/admin
-/package/version @dwightguth @ehildenb @rv-jenkins @F-WRunTime @Baltoli
+/package/version @ehildenb @rv-jenkins @F-WRunTime @tothtamas28
