--- a/.github/workflows/Dockerfile
+++ b/.github/workflows/Dockerfile
@@ -65,6 +65,7 @@ RUN    apt-get update              \
         python3-dev                \
         python3-distutils          \
         python3-pip                \
+        xxd                        \
         zlib1g-dev
 
 COPY --from=Z3 /usr/bin/z3 /usr/bin/z3
