--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,6 +99,7 @@ jobs:
           os: ubuntu
           distro: noble
           llvm: 16
+          jdk: 21
           pkg-name: kframework_amd64_ubuntu_noble.deb
           build-package: package/debian/build-package noble kframework
           test-package: package/debian/test-package
