--- a/package/docker/Dockerfile.ubuntu-jammy
+++ b/package/docker/Dockerfile.ubuntu-jammy
@@ -9,7 +9,8 @@ RUN    apt-get update                   \
                         build-essential \
                         git             \
                         python3         \
-                        python3-pip
+                        python3-pip     \
+                        pipx
 
 COPY kframework_amd64_ubuntu_jammy.deb /kframework_amd64_ubuntu_jammy.deb
 RUN    apt-get update                                                                   \
@@ -17,7 +18,7 @@ RUN    apt-get update                                                           
     && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_jammy.deb
 
 COPY pyk /pyk
-RUN pip install poetry        \
+RUN pipx install poetry       \
     && cd /pyk                \
     && make build             \
     && pip install dist/*.whl \
