--- a/package/docker/Dockerfile.ubuntu-noble
+++ b/package/docker/Dockerfile.ubuntu-noble
@@ -20,6 +20,7 @@ RUN    apt-get update                                                           
 COPY pyk /pyk
 RUN pipx install poetry       \
     && pipx ensurepath        \
+    && source /root/.bashrc   \
     && cd /pyk                \
     && make build             \
     && pip install dist/*.whl \
