--- a/package/docker/Dockerfile.ubuntu-noble
+++ b/package/docker/Dockerfile.ubuntu-noble
@@ -18,12 +18,12 @@ RUN    apt-get update                                                           
     && apt-get install --yes --no-install-recommends /kframework_amd64_ubuntu_noble.deb
 
 COPY pyk /pyk
-RUN pipx install poetry       \
-    && pipx ensurepath        \
-    && . /root/.profile       \
-    && cd /pyk                \
-    && make build             \
-    && pip install dist/*.whl \
+RUN pipx install poetry                               \
+    && pipx ensurepath                                \
+    && . /root/.profile                               \
+    && cd /pyk                                        \
+    && make build                                     \
+    && pip install dist/*.whl --break-system-packages \
     && rm -rf /pyk
 
 RUN rm -rf /kframework_amd64_ubuntu_noble.deb
