--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -22,7 +22,7 @@ coloredlogs = "^15.0.1"
 filelock = "^3.9.0"
 graphviz = "^0.20.1"
 hypothesis = "^6.103.1"
-psutil = "5.9.5"
+psutil = "^5.9.5"
 pybind11 = "^2.10.3"
 pytest = "*"
 textual = "^0.27.0"
