Add `test_prove_legacy_profiles` test

--- a/pyk/src/tests/unit/test-data/pyk_toml_test.toml
+++ b/pyk/src/tests/unit/test-data/pyk_toml_test.toml
@@ -6,8 +6,11 @@ definition = "/tmp"
 input = "kast-json"
 no-minimize = true
 
-[prove-legacy]
+[prove-legacy.default]
 kArgs = ["arg 1","args 2"]
+
+[prove-legacy.verbose]
+verbose = true
 
 [coverage.a_profile]
 verbose = true
