--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v4
       - name: 'Publish prerelease'
         env:
-          GITHUB_TOKEN: ${{ secrets.JENKINS_GITHUB_PAT }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -x
           release_tag=v$(cat package/version)
