--- a/.github/workflows/master-pr.yml
+++ b/.github/workflows/master-pr.yml
@@ -12,16 +12,16 @@ jobs:
   change-base:
     name: 'Change base to develop branch'
     runs-on: ubuntu-24.04
+    permissions:
+      pull-requests: write
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.JENKINS_GITHUB_PAT }}
-          # fetch-depth 0 means deep clone the repo
           fetch-depth: 0
       - name: 'Change base'
         env:
-          GITHUB_TOKEN: ${{ secrets.JENKINS_GITHUB_PAT }}
+          GITHUB_TOKEN: ${{ github.token }}
         run: |
           set -x
           pull_number=$(jq --raw-output .pull_request.number "${GITHUB_EVENT_PATH}")
