modified:   .github/workflows/master-pr.yml modified:   .github/workflows/test-pr.yml - These have the same name for the workflows.. - Modifying master-pr.yml name from "Test PR" > "Configure PR"

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'develop'
   workflow_run:
-    workflows: ['Test PR']
+    workflows: ['Configure PR']
     types:
       - completed
 concurrency:
