Adjusting permissions of Configure PR worfklow to have actions write to trigger other workflows

--- a/.github/workflows/master-pr.yml
+++ b/.github/workflows/master-pr.yml
@@ -13,6 +13,8 @@ jobs:
     runs-on: ubuntu-24.04
     permissions:
       pull-requests: write
+      actions: write
+      contents: read
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
