--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -4,16 +4,15 @@ on:
     types: [opened, reopened, synchronize]
     branches:
       - 'develop'
-  workflow_run:
-    workflows: ['Configure PR']
-    types:
-      - completed
+  issue_comment:
+    types: [created]
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
   format-check:
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == 'Target Branch Changed! Thank you for your support!') }}
     name: 'Java: Linting'
     runs-on: ubuntu-latest
     steps:
@@ -33,6 +32,7 @@ jobs:
 
 
   pyk-code-quality-checks:
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == 'Target Branch Changed! Thank you for your support!') }}
     name: 'Pyk: Code Quality & Unit Tests'
     runs-on: ubuntu-latest
     timeout-minutes: 5
@@ -59,6 +59,7 @@ jobs:
 
 
   code-quality:
+    if: ${{ github.event_name == 'pull_request' || (github.event_name == 'issue_comment' && github.event.comment.body == 'Target Branch Changed! Thank you for your support!') }}
     name: 'Code Quality Checks'
     runs-on: ubuntu-latest
     needs:
