modified:   .github/workflows/master-pr.yml - Test with write-all if actions-bot will be allowed to trigger the   test-pr.yml

--- a/.github/workflows/master-pr.yml
+++ b/.github/workflows/master-pr.yml
@@ -11,10 +11,7 @@ jobs:
   change-base:
     name: 'Change base to develop branch'
     runs-on: ubuntu-24.04
-    permissions:
-      pull-requests: write
-      actions: write
-      contents: read
+    permissions: "write-all"
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
