modified:   .github/workflows/master-pr.yml - Revert "write-all"

--- a/.github/workflows/master-pr.yml
+++ b/.github/workflows/master-pr.yml
@@ -11,7 +11,10 @@ jobs:
   change-base:
     name: 'Change base to develop branch'
     runs-on: ubuntu-24.04
-    permissions: "write-all"
+    permissions:
+      pull-requests: write
+      actions: write
+      contents: read
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
