--- a/.github/actions/setup-pyk-env/action.yml
+++ b/.github/actions/setup-pyk-env/action.yml
@@ -15,6 +15,8 @@ runs:
         python-version: ${{ inputs.python-version }}
     - name: 'Install Poetry'
       uses: Gr1N/setup-poetry@v9
+      with:
+        poetry-version: '1.8.5'
     - name: 'Install package'
       shell: bash
       run: poetry -C pyk install
