Make runner version explicit

--- a/.github/workflows/master-push.yml
+++ b/.github/workflows/master-push.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   gh-release:
     name: 'Publish GitHub Prerelease'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     steps:
       - name: 'Check out code'
         uses: actions/checkout@v4
