Fix Poetry and Ubuntu runner versions on CI (#4721)
* Fix Poetry version to `1.8.5`
* Replace `ubuntu-latest` by `ubuntu-24.04`

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
 
   source-tarball:
     name: 'Create source tarball'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     environment: production
     steps:
       - name: 'Check out code'
@@ -475,7 +475,7 @@ jobs:
 
   pyk-publish:
     name: 'Publish pyk'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     environment: production
     permissions:
       id-token: write
@@ -491,6 +491,8 @@ jobs:
 
       - name: Install Poetry
         uses: Gr1N/setup-poetry@v9
+        with:
+          poetry-version: '1.8.5'
 
       - name: Build pyk
         working-directory: pyk
@@ -512,10 +514,10 @@ jobs:
             fi
             sleep 10
           done
-  
+
   notify-dependents:
     name: 'Notify Dependents'
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     needs: pyk-publish
     steps:
       - name: Check out code
