--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -19,6 +19,7 @@ from = "src"
 python = "^3.10"
 cmd2 = "^2.4.2"
 coloredlogs = "^15.0.1"
+cookiecutter = "^2.6.0"
 filelock = "^3.9.0"
 graphviz = "^0.20.1"
 hypothesis = "^6.103.1"
@@ -90,4 +91,8 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "coloredlogs"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "cookiecutter.*"
 ignore_missing_imports = true
